src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Secondary_Contact_Type__c</fullName>
        <label>Secondary Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-op/MDF Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delegated Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disti Ptnr Cert Status Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Dir/CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAP Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology (IT) Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Co-op Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Marketing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key MDF Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Motorola EMb Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Motorola EMb Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Motorola Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Pricing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Purchasing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Sales Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Sales Out Rpt Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Service Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Role__c</fullName>
        <label>Secondary Role</label>
        <picklist>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Siebel_Attribute_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Concession Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_Attribute_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Ordering Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_Attribute_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Review Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_Attributes__c</fullName>
        <formula>LPAD(( IF( Siebel_Attribute_1__c , &apos;Price Concession Access; &apos;, null) + 
 IF(  Siebel_Attribute_2__c , &apos;Portal Ordering Access; &apos;, null) +
 IF(  Siebel_Attribute_3__c , &apos;Order Review Access; &apos;, null) +
 IF(  Siebel_Attribute_4__c , &apos;Finance Manager Access; &apos;, null) +
 IF(  Siebel_Attribute_5__c , &apos;Product Availability Access; &apos;, null) +
 IF(  Siebel_Attribute_6__c , &apos;Order Acknowledgement Notification; &apos;, null) +
 IF(  Siebel_Attribute_7__c , &apos;Finance Documentation Notification; &apos;, null)),  
LEN(( IF( Siebel_Attribute_1__c , &apos;Price Concession Access; &apos;, null) + 
 IF(  Siebel_Attribute_2__c , &apos;Portal Ordering Access; &apos;, null) +
 IF(  Siebel_Attribute_3__c , &apos;Order Review Access; &apos;, null) +
 IF(  Siebel_Attribute_4__c , &apos;Finance Manager Access; &apos;, null) +
 IF(  Siebel_Attribute_5__c , &apos;Product Availability Access; &apos;, null) +
 IF(  Siebel_Attribute_6__c , &apos;Order Acknowledgement Notification; &apos;, null) +
 IF(  Siebel_Attribute_7__c , &apos;Finance Documentation Notification; &apos;, null))) - 2 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel Attributes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Key__c</fullName>
        <label>Site Key</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRLG_Cust_AccountID__c</fullName>
        <label>TRLG Cust AccountID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <label>Tag</label>
        <picklist>
            <picklistValues>
                <fullName>Partner Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Pricing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Scorecard Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary CXO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner/Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Legal Signatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delegated Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Dir/CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Sales Out Rpt Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS Business Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager/VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Insurance Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentive Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentive Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentive Admin/Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentive AOS Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State and Local MR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal MR</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Technology_Preference__c</fullName>
        <label>Technology Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Data Capture - Scanning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barcode Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactive Kiosk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosk Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print and Apply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID Readers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Networks</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tool_Access__c</fullName>
        <inlineHelpText>Channel Tools the contact can access</inlineHelpText>
        <label>Tool Access</label>
        <picklist>
            <picklistValues>
                <fullName>Deal Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer Launchpad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Partner Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Material Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Provisioning Tool</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>User_Already_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Already Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZEB_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <referenceTo>Vertex_Validation_Postal_Code__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZEB_Street_Address__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZEB_VertexCity__c</fullName>
        <formula>ZEB_Postal_Code__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZEB Vertex City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Vertex_State__c</fullName>
        <formula>ZEB_Postal_Code__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZEB Vertex State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZEB_Vertex_Zip__c</fullName>
        <formula>ZEB_Postal_Code__r.Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZEB Vertex Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__FolderID__c</fullName>
        <description>This field is used to store the folder id when the files are uploaded to BOX</description>
        <label>FolderID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <label>Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <validationRules>
        <fullName>Contact_Address_Restriction</fullName>
        <active>true</active>
        <description>Restricts anyone other that system administrators from updating the contact address for identified locked down master accounts.</description>
        <errorConditionFormula>Change_Restricted_contact__c  = TRUE &amp;&amp; 
( 
ISCHANGED(   MailingStreet   ) || 
ISCHANGED(  MailingCity  ) || 
ISCHANGED(  MailingState  ) || 
ISCHANGED(  MailingPostalCode  ) 
) &amp;&amp; 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;
&amp;&amp; $Profile.Name &lt;&gt; &quot;Channel Marketing/Ops&quot;</errorConditionFormula>
        <errorMessage>This field cannot be modified for master contacts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Email_Restriction</fullName>
        <active>true</active>
        <description>Restricts anyone other that system administrators from updating contact email for identified locked down master accounts.</description>
        <errorConditionFormula>AND(  Change_Restricted_contact__c  
= TRUE, 
ISCHANGED(  Email  ) 
)&amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot;
&amp;&amp; 
$Profile.Name &lt;&gt; &quot;Channel Marketing/Ops&quot;</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>This field cannot be modified for master contacts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Name_Restriction</fullName>
        <active>true</active>
        <description>Restricts anyone other that system administrators from updating contact names for identified locked down master accounts.</description>
        <errorConditionFormula>Change_Restricted_contact__c  = TRUE &amp;&amp; 
( 
ISCHANGED(  FirstName  ) || 
ISCHANGED(  LastName  ) 
) &amp;&amp; 

$Profile.Name &lt;&gt; &quot;System Administrator&quot;
&amp;&amp; $Profile.Name &lt;&gt; &quot;Channel Marketing/Ops&quot;</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>This field cannot be modified for master contacts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Title_Restriction</fullName>
        <active>true</active>
        <description>Restricts anyone other that system administrators from updating contact title for identified locked down master accounts.</description>
        <errorConditionFormula>AND(  Change_Restricted_contact__c  
= TRUE, 
ISCHANGED( Title ) 
)&amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot;
&amp;&amp; $Profile.Name &lt;&gt; &quot;Channel Marketing/Ops&quot;</errorConditionFormula>
        <errorDisplayField>Title</errorDisplayField>
        <errorMessage>This field cannot be modified for master contacts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Name_Mandatory_for_Partner_Contact</fullName>
        <active>true</active>
        <description>This validation rule is written to make First Name mandatory for Partner Contacts.</description>
        <errorConditionFormula>RecordType.Name  = &apos;Partner&apos; &amp;&amp;  ISPICKVAL( Contact_Status__c , &apos;Active&apos;) &amp;&amp; ISBLANK( FirstName )</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Addres_Mandatory_for_Partner_Con</fullName>
        <active>false</active>
        <description>This validation rule is written to make Mailing Street, Mailing City, Mailing Country and Mailing Postal Code mandatory for Partner Contacts.</description>
        <errorConditionFormula>RecordType.Name  = &apos;Partner&apos; &amp;&amp;  ISPICKVAL( Contact_Status__c , &apos;Active&apos;) &amp;&amp;  ( ISBLANK( MailingStreet ) ||  ISBLANK( MailingCity )  ||  ISBLANK( MailingCountry ) ||  ISBLANK( MailingPostalCode )  ) &amp;&amp; ISNEW()</errorConditionFormula>
        <errorMessage>Mailing Street, Mailing City, Mailing Country and Mailing Postal Code is required for Partner Contacts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Country_Mandatory_for_Partner</fullName>
        <active>false</active>
        <description>This validation rule is written to make Mailing Country mandatory for Partners</description>
        <errorConditionFormula>RecordType.Name  = &apos;Partner&apos; &amp;&amp; ISBLANK( MailingCountry)</errorConditionFormula>
        <errorMessage>Mailing Country is required for Partner Contacts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_State_Mandatory_for_Partner_Cont</fullName>
        <active>true</active>
        <description>This validation rule is written to make Mailing State mandatory for US and Canada.</description>
        <errorConditionFormula>RecordType.Name  = &apos;Partner&apos; &amp;&amp; ISPICKVAL( Contact_Status__c , &apos;Active&apos;) &amp;&amp; ( ISPICKVAL(MailingCountryCode, &apos;US&apos;) || ISPICKVAL(MailingCountryCode, &apos;CA&apos;) ) &amp;&amp;  ISBLANK( MailingState )</errorConditionFormula>
        <errorDisplayField>MailingState</errorDisplayField>
        <errorMessage>Mailing State is required if the Partner Contact&apos;s Mailing Country is United States or Canada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PC_Validate_No_of_partner_admins</fullName>
        <active>true</active>
        <errorConditionFormula>OR((ISNEW() &amp;&amp; RecordType.DeveloperName  = &apos;Partner&apos;  &amp;&amp; Admin_Access_Requested__c  = TRUE &amp;&amp;   Account.Max_No_of_Partner_Admins__c  &lt;=  (  Account.Number_Active_Partner_Admins__c )),(NOT(ISNEW()) &amp;&amp; RecordType.DeveloperName  = &apos;Partner&apos;  &amp;&amp; Admin_Access_Requested__c  = TRUE &amp;&amp; ISCHANGED( Admin_Access_Requested__c )  &amp;&amp;  Account.Max_No_of_Partner_Admins__c   &lt;=  Account.Number_Active_Partner_Admins__c)
)</errorConditionFormula>
        <errorMessage>Your account has reached the maximum limit for the number of partner administrators. Please raise a case to increase the number of partner administrators limit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_Contact_cannot_be_Created</fullName>
        <active>true</active>
        <description>Partner Contacts cannot be created.</description>
        <errorConditionFormula>AND(NOT(CONTAINS($Profile.Name,&quot;ZEB&quot;)),($Profile.Name &lt;&gt; &quot;System Administrator&quot;),($Profile.Name &lt;&gt; &quot;Channel Administrator&quot;), ($Profile.Name &lt;&gt; &quot;EMEA Customer Service Reps&quot;), ($Profile.Name &lt;&gt; &quot;Partner Transition Profile&quot;), ($Profile.Name &lt;&gt; &quot;Channel PIC&quot;), ($Profile.Name &lt;&gt; &quot;Channel Operations&quot;), ($Profile.Name &lt;&gt; &quot;Partner Contact&quot;),($Profile.Name &lt;&gt; &quot;Partner Contact Community Login&quot;),
($Profile.Name &lt;&gt; &quot;Distributor Admin&quot;),($Profile.Name &lt;&gt; &quot;Partner Admin Community Login&quot;),($Profile.Name &lt;&gt; &quot;Partner Admin&quot;),($Profile.Name &lt;&gt; &quot;MCC and PIC&quot;),($Profile.Name &lt;&gt; &quot;Channel Administrator&quot;), ($Profile.Name &lt;&gt; &quot;Channel Business Operations&quot;), OR(ISPICKVAL(Account.Account_Type__c,&quot;Partner&quot;)))</errorConditionFormula>
        <errorMessage>Partner Contacts cannot be created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_Contact_cannot_be_Modified</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(CONTAINS($Profile.Name,&quot;ZEB&quot;)),NOT(ISNEW()),($Profile.Name &lt;&gt; &quot;Partner Transition Profile&quot;),($Profile.Name &lt;&gt; &quot;Channel PIC&quot;), ($Profile.Name &lt;&gt; &quot;Channel Operations&quot;), ($Profile.Name &lt;&gt; &quot;System Administrator&quot;),($Profile.Name &lt;&gt; &quot;Channel Administrator&quot;), ($Profile.Name &lt;&gt; &quot;Partner Contact&quot;),($Profile.Name &lt;&gt; &quot;Partner Admin Community Login&quot;),($Profile.Name &lt;&gt; &quot;Partner Contact Community Login&quot;),($Profile.Name &lt;&gt; &quot;Partner Admin&quot;),($Profile.Name &lt;&gt; &quot;Distributor Admin&quot;),($Profile.Name &lt;&gt; &quot;MCC and PIC&quot;), ($Profile.Name &lt;&gt; &quot;Channel Administrator&quot;),($Profile.Name &lt;&gt; &quot;Channel Business Operations&quot;), OR(ISPICKVAL(Account.Account_Type__c,&quot;Partner&quot;)))</errorConditionFormula>
        <errorMessage>Partner Contacts cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_PIC_frm_deactivating_last_admin</fullName>
        <active>true</active>
        <description>This validation rule is written to restrict the PIC from deactivating the last Partner Admin.</description>
        <errorConditionFormula>OR((ISNEW() &amp;&amp; RecordType.DeveloperName  = &apos;Partner&apos;  &amp;&amp; Admin_Access_Requested__c  = TRUE &amp;&amp;   Account.Max_No_of_Partner_Admins__c  &lt;=  (  Account.Number_Active_Partner_Admins__c )),(NOT(ISNEW()) &amp;&amp; RecordType.DeveloperName  = &apos;Partner&apos;  &amp;&amp; Admin_Access_Requested__c  = TRUE &amp;&amp; ISCHANGED( Admin_Access_Requested__c )  &amp;&amp;  Account.Max_No_of_Partner_Admins__c   &lt;=  Account.Number_Active_Partner_Admins__c)
)</errorConditionFormula>
        <errorMessage>You cannot deactivate or demote the last Partner Admin of an account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salutation_Mandatory_for_Partner_Contact</fullName>
        <active>false</active>
        <description>This validation rule is written to make Salutation mandatory for Partner Contacts.</description>
        <errorConditionFormula>RecordType.Name  = &apos;Partner&apos; &amp;&amp;  ISPICKVAL( Contact_Status__c , &apos;Active&apos;) &amp;&amp; ISBLANK( TEXT(Salutation) ) &amp;&amp; ISNEW()</errorConditionFormula>
        <errorDisplayField>Salutation</errorDisplayField>
        <errorMessage>Salutation is required for Partner Contacts.</errorMessage>
    </validationRules>
</CustomObject>